settings: Fix text alignment issues in profile picture overlay.
Fixes #21342

--- a/static/styles/image_upload_widget.css
+++ b/static/styles/image_upload_widget.css
@@ -122,6 +122,13 @@
 /* CSS related to settings page user avatar upload widget only */
 #user-avatar-upload-widget {
     .image_upload_button {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
         border-radius: 5px;
         box-shadow: 0 0 10px hsla(0, 0%, 0%, 0.1);
         z-index: 99;
@@ -140,14 +147,12 @@
         font-size: 3rem;
     }
 
-    .image-delete-text {
-        top: 90px;
-        right: 40px;
-    }
-
-    .image-upload-text {
-        top: 90px;
-        right: 24px;
+    .image-delete-text,
+    .image-upload-text,
+    .image-disabled-text {
+        box-sizing: border-box;
+        width: 100%;
+        padding: 0 10px;
     }
 
     .image_upload_spinner {
